= Counterclockwise ChangeLog 
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0

== Changes between Counterclockwise 0.30.0 and 0.30.1

`0.30.1` released on November , 2014

=== Fix
- Eclipse source folders could not be correctly set when some Leiningen plugins were placing jar files external to the project in the source folders list. Fix Issue #675 - Could not reset project classpath NPE

=== CCW/Standalone Product
=== Leiningen
=== Project creation wizard

=== User Plugins

==== Feature

- `defhandler` now accepts closures in addition to var symbols.
- in `defkeybinding`, `Cmd` is now an alias for `M1`, thus making it OS portable (`Cmd` will be replaced to `COMMAND` for OS X, and `Ctrl` for Windows/Linux). If you really insist on being specific, you can you `COMMAND` or `CTRL` which are not interpreted.
==== Fix
- commands/handlers/keybindings were not properly removed when all user plugins were removed at once (e.g. ~/.ccw/ was renamed to ~/.ccw-disabled)
- `defhandler` does not create a new var named after the command (with a '-handler' suffix) anymore
- `defkeybinding` correctly interprets the :context key
- `defkeybinding` a bad :context value could break binding tables. This is fixed, an error is reported on stdout and the :window context is used as a default
== Changes between Counterclockwise 0.29.1 and 0.30.0

`0.30.0` released on November 16, 2014

This release fixes bug in the 0.29.1 release.

It has not been labelled 0.29.2 because one fix involved a new way of building the CCW/Standalone Product.

=== Fix

- There were `java.lang.ExceptionInInitializerError` caused by: org.eclipse.swt.SWTException: Invalid thread access errors at Eclipse startup, caused by (import) calls in Clojure loading JDT classes static initializers too early.
    This has been fixed by changing the way Preferences are fetched from the JDT.